--- a/Source/MaxLand/Projects/MaxLandApp/Color.cls
+++ b/Source/MaxLand/Projects/MaxLandApp/Color.cls
@@ -114,24 +114,24 @@ Public Property Let ToString(ByVal RHS As String)
         End If
     End If
     
-    RHS = Trim(RHS)
-    If Left(RHS, 1) = "[" And Right(RHS, 1) = "]" Then
-        RHS = Mid(RHS, 2, Len(RHS) - 2) & ","
-        If CountWord(RHS, ",") = 4 Then
-            pAlpha = frmMain.Evaluate(ParseNumerical(RHS))
-            pRed = frmMain.Evaluate(ParseNumerical(RHS))
-            pGreen = frmMain.Evaluate(ParseNumerical(RHS))
-            pBlue = frmMain.Evaluate(ParseNumerical(RHS))
-        End If
-    Else
-        If InStr(RHS, ",") = 3 Then RHS = RHS & ","
-        If CountWord(RHS, ",") = 4 Then
-            pAlpha = ParseNumerical(RHS)
-            pRed = ParseNumerical(RHS)
-            pGreen = ParseNumerical(RHS)
-            pBlue = ParseNumerical(RHS)
-        End If
-    End If
+'    RHS = Trim(RHS)
+'    If Left(RHS, 1) = "[" And Right(RHS, 1) = "]" Then
+'        RHS = Mid(RHS, 2, Len(RHS) - 2) & ","
+'        If CountWord(RHS, ",") = 4 Then
+'            pAlpha = frmMain.Evaluate(ParseNumerical(RHS))
+'            pRed = frmMain.Evaluate(ParseNumerical(RHS))
+'            pGreen = frmMain.Evaluate(ParseNumerical(RHS))
+'            pBlue = frmMain.Evaluate(ParseNumerical(RHS))
+'        End If
+'    Else
+'        If InStr(RHS, ",") = 3 Then RHS = RHS & ","
+'        If CountWord(RHS, ",") = 4 Then
+'            pAlpha = ParseNumerical(RHS)
+'            pRed = ParseNumerical(RHS)
+'            pGreen = ParseNumerical(RHS)
+'            pBlue = ParseNumerical(RHS)
+'        End If
+'    End If
     
     
     RaiseEvent Changed
