--- a/Source/MaxLand/Projects/MaxLandApp/Point.cls
+++ b/Source/MaxLand/Projects/MaxLandApp/Point.cls
@@ -13,7 +13,7 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 Option Explicit
 
-Implements Coord
+Implements Plot
 
 Private pZ As Single
 
@@ -23,17 +23,17 @@ Attribute Serialize.VB_MemberFlags = "40"
 End Property
 
 Public Property Get X() As Single
-    X = Coord.X
+    X = Plot.X
 End Property
 Public Property Let X(ByVal RHS As Single)
-    Coord.X = RHS
+    Plot.X = RHS
 End Property
 
 Public Property Get Y() As Single
-    Y = Coord.Y
+    Y = Plot.Y
 End Property
 Public Property Let Y(ByVal RHS As Single)
-    Coord.Y = RHS
+    Plot.Y = RHS
 End Property
 
 Public Property Get Z() As Single
@@ -45,31 +45,31 @@ End Property
 
 Public Function Equals(ByRef Point As Point) As Boolean
     If Point Is Nothing Then
-        Equals = (Coord.Equals(Point) And Z = 0)
+        Equals = (Plot.Equals(Point) And Z = 0)
     Else
-        Equals = (Coord.Equals(Point) And Point.Z = Z)
+        Equals = (Plot.Equals(Point) And Point.Z = Z)
     End If
 End Function
 
 Public Property Get ToString() As String
 Attribute ToString.VB_UserMemId = 0
 Attribute ToString.VB_MemberFlags = "240"
-    ToString = "[" & Round(Coord.X, 6) & ", " & Round(Coord.Y, 6) & ", " & Round(pZ, 6) & "]"
+    ToString = "[" & Round(Plot.X, 6) & ", " & Round(Plot.Y, 6) & ", " & Round(pZ, 6) & "]"
 End Property
 Public Property Let ToString(ByVal RHS As String)
     RHS = Trim(RHS)
     If Left(RHS, 1) = "[" And Right(RHS, 1) = "]" Then
         RHS = Mid(RHS, 2, Len(RHS) - 2) & ","
         If CountWord(RHS, ",") = 3 Then
-            Coord.X = frmMain.Evaluate(ParseNumerical(RHS))
-            Coord.Y = frmMain.Evaluate(ParseNumerical(RHS))
+            Plot.X = frmMain.Evaluate(ParseNumerical(RHS))
+            Plot.Y = frmMain.Evaluate(ParseNumerical(RHS))
             pZ = frmMain.Evaluate(ParseNumerical(RHS))
         End If
     Else
         If CountWord(RHS, ",") = 2 Then RHS = RHS & ","
         If CountWord(RHS, ",") = 3 Then
-            Coord.X = ParseNumerical(RHS)
-            Coord.Y = ParseNumerical(RHS)
+            Plot.X = ParseNumerical(RHS)
+            Plot.Y = ParseNumerical(RHS)
             pZ = ParseNumerical(RHS)
         End If
     End If
@@ -86,45 +86,45 @@ End Property
 
 Private Sub Class_Initialize()
     Stats_Point_Count = Stats_Point_Count + 1
-    'Set Coord = New Coord
-    vbaObjSetAddref Coord, ObjPtr(New Coord)
+    'Set Plot = New Plot
+    vbaObjSetAddref Plot, ObjPtr(New Plot)
 End Sub
 
 Private Sub Class_Terminate()
-    'Set Coord = Nothing
-    vbaObjSet Coord, ObjPtr(Nothing)
+    'Set Plot = Nothing
+    vbaObjSet Plot, ObjPtr(Nothing)
     Stats_Point_Count = Stats_Point_Count - 1
 End Sub
 
-Private Function Coord_Equals(Point As Point) As Boolean
-    Coord_Equals = Coord.Equals(Point)
+Private Function Plot_Equals(Point As Point) As Boolean
+    Plot_Equals = Plot.Equals(Point)
 End Function
 
-Private Property Get Coord_Serialize() As Boolean
-    Coord_Serialize = Coord.Serialize
+Private Property Get Plot_Serialize() As Boolean
+    Plot_Serialize = Plot.Serialize
 End Property
 
-Private Property Let Coord_ToString(ByVal RHS As String)
-    Coord.ToString = RHS
+Private Property Let Plot_ToString(ByVal RHS As String)
+    Plot.ToString = RHS
 End Property
 
-Private Property Get Coord_ToString() As String
-    Coord_ToString = Coord.ToString
+Private Property Get Plot_ToString() As String
+    Plot_ToString = Plot.ToString
 End Property
 
-Private Property Let Coord_X(ByVal RHS As Single)
-    Coord.X = RHS
+Private Property Let Plot_X(ByVal RHS As Single)
+    Plot.X = RHS
 End Property
 
-Private Property Get Coord_X() As Single
-    Coord_X = Coord.X
+Private Property Get Plot_X() As Single
+    Plot_X = Plot.X
 End Property
 
-Private Property Let Coord_Y(ByVal RHS As Single)
-    Coord.Y = RHS
+Private Property Let Plot_Y(ByVal RHS As Single)
+    Plot.Y = RHS
 End Property
 
-Private Property Get Coord_Y() As Single
-    Coord_Y = Coord.Y
+Private Property Get Plot_Y() As Single
+    Plot_Y = Plot.Y
 End Property
 
